# api/api.yaml
@@ -45,12 +45,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/PageCompanyResponse'
-  /departments:
+
+  /companies-details:
     get:
-      tags: [Departments]
-      operationId: searchDepartments
-      summary: Search departments
-      description: Search departments by optional filters and pagination
+      tags: [Companies]
+      operationId: searchCompaniesDetails
+      summary: Search companies Details
+      description: Search companies by optional filters and pagination
       parameters:
         - in: query
           name: id
@@ -58,29 +59,22 @@ paths:
           schema:
             type: integer
             format: int64
-          description: Filter by exact department id
+          description: Filter by exact company id
         - in: query
           name: name
           required: false
           schema:
             type: string
-          description: Filter by department name (contains, case-insensitive)
-        - in: query
-          name: companyId
-          required: false
-          schema:
-            type: integer
-            format: int64
-          description: Filter by owning company id
+          description: Filter by company name (contains, case-insensitive)
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/size'
       responses:
         '200':
-          description: Departments page
+          description: Companies page
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PageDepartmentResponse'
+                $ref: '#/components/schemas/PageCompanyDetailsResponse'
   /employees:
     get:
       tags: [Employees]
@@ -164,8 +158,9 @@ components:
         departments:
           type: array
           items:
-            $ref: '#/components/schemas/Department'
-    Department:
+            $ref: '#/components/schemas/DepartmentLight'
+
+    CompanyDetails:
       type: object
       required: [id, name]
       properties:
@@ -174,8 +169,26 @@ components:
           format: int64
         name:
           type: string
+        departments:
+          type: array
+          items:
+            $ref: '#/components/schemas/Department'
+    DepartmentLight:
+      type: object
+      required: [ id, name ]
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
         chief:
           $ref: '#/components/schemas/EmployeeLight'
+    Department:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/DepartmentLight'
+      properties:
         employees:
           type: array
           items:
@@ -226,14 +239,14 @@ components:
             $ref: '#/components/schemas/Company'
         page:
           $ref: '#/components/schemas/PageMeta'
-    PageDepartmentResponse:
+    PageCompanyDetailsResponse:
       type: object
       required: [items, page]
       properties:
         items:
           type: array
           items:
-            $ref: '#/components/schemas/Department'
+            $ref: '#/components/schemas/CompanyDetails'
         page:
           $ref: '#/components/schemas/PageMeta'
     PageEmployeeResponse:
